@@ -1,0 +1,21 @@
+//
+// Type: linkdelight_black_portrait
+//
+// Comment: Portrait mode, different enclosure, battery powered
+//
+// Status: wip
+// Credit: By superelchi, thx Papa Oscar
+// Date: 2013-01-18
+// Url:  http://www.ebay.com/itm/230670117410
+// 
+// The CRCs identify.py detected - in the form "OpenWin CRC", "Init(Tbl) CRC"
+// CRC: 0xc08ddb83, 0x78c521d5
+//
+// 
+#define LCD_240x320
+#define LCD_CONTROLLER_CUSTOM
+#define LCD_BACKLIGHT_HIGH
+#define LCD_ORIENTATION_RGB RGB_UP
+#define DEFAULT_ORIENTATION ROT_UP
+#define LCD_DEFAULT_CONTRAST_VALUE 4
+#define LCD_DEFAULT_BRIGHTNESS_VALUE 20
